--- a/winter2025.html
+++ b/winter2025.html
@@ -71,7 +71,7 @@
                         <td align="left" style="padding:0 24px 18px 24px;">
                             <div
                                 style="font-family:Garamond, Georgia, 'Times New Roman', Times, serif; font-size:18px; line-height:1.55; color:#111111;">
-                               Continuing our 2025-2026 season, whether you are brand new to the sport of fencing, returning teammates, or one of our team 
+                               Continuing our 2025-2026 season, whether you are brand new to the sport of fencing, returning teammates, or one of our 
                                alumni and friends, we are joyed that you are here! This Winter Newsletter will provide important information on upcoming 
                                competitions, the 2025-2026 Winter Quarter Practice Schedule, and Autumn Quarter recaps so you can stay tapped in to the UChicago
                                Fencing Community!
