--- a/winter2025.html
+++ b/winter2025.html
@@ -113,7 +113,7 @@
                                     <td valign="top" width="60%" style="width:60%; padding:0 12px 12px 0;">
                                         <div
                                             style="font-family:Garamond, Georgia, 'Times New Roman', Times, serif; font-size:18px; line-height:1.55; color:#111111;">
-                                            All practices are held on the Crown balcony. Thanks to generous alumni
+                                            All practices are held on the Crown balcony. Thanks to continued alumni
                                             support, we have club gear available for new fencers to use. Additionally,
                                             Coach Bakhyt (Head Coach, Fencing Center of Chicago) will be coaching our
                                             épée and foil squads. 
@@ -359,30 +359,7 @@
                             </div>
                         </td>
                     </tr>
-
-     <!-- Recap: 1x1 image row (single photo with caption) -->
-        <tr>
-         <td align="center" style="padding:6px 24px 14px 24px;">
-          <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%" style="border:1px solid #800000;">
-           <tr>
-            <td>
-              <img src="https://i.ibb.co/n8K9HJdn/team-cfc-2025.png" 
-               alt="UChicago Fencing at Lawrence Duals 2025"
-               style="display:block; width:100%; height:auto; border:0; outline:none;">
-            </td>
-          </tr>
-          <tr>
-            <td style="background-color:#f7f7f7; padding:6px 8px; border-top:1px solid #800000;">
-              <div style="font-family:Garamond, Georgia, 'Times New Roman', Times, serif; 
-                      font-size:14px; color:#000000; text-align:center;">
-                Lawrence Duals Autumn 2025
-              </div>
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-
+    
                     <!-- OFFICERS + SIGN-OFF (clean list) -->
                     <tr>
                         <td style="padding:12px 24px 6px 24px;">
