--- a/winter2025.html
+++ b/winter2025.html
@@ -61,7 +61,7 @@
                                 style="width:100%; max-width:632px; border:1px solid #800000;">
                                 <tr>
                                     <td style="padding:0;">
-                                        <img src="https://drive.google.com/file/d/10pxv6lWhdsHL0h8YaUWycACjElUycoNH/view?usp=drive_link">
+                                        <img src="https://raw.githubusercontent.com/JaredSJ2024/winter2026.html/main/images/team-photo-2025.jpg">
                                             alt="UChicago Fencing header image"
                                             style="display:block; border:0; outline:none; width:100%; height:auto;">
                                     </td>
@@ -297,7 +297,7 @@
       <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%" style="border:1px solid #800000;">
         <tr>
           <td>
-            <img src="https://drive.google.com/file/d/13idCyl6ocpXA-n7K_t0o74AZZxva09qE/view?usp=drive_link
+            <img src="CharlotteAttackFoil.jpg
                  style="display:block; width:100%; height:auto; border:0; outline:none;">
           </td>
         </tr>
@@ -316,7 +316,7 @@
       <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%" style="border:1px solid #800000;">
         <tr>
           <td>
-            <img src="https://drive.google.com/file/d/1neOqSOorHXxWrulmXK4NQl0Exhsdri6h/view?usp=drive_link
+            <img src="OliverEpeeEndurance.jpg
                  style="display:block; width:100%; height:auto; border:0; outline:none;">
           </td>
         </tr>
@@ -335,7 +335,7 @@
       <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%" style="border:1px solid #800000;">
         <tr>
           <td>
-            <img src="https://drive.google.com/file/d/1npIHj7s9TJUB8Npg4oA2kgtm6BL2U3oN/view?usp=drive_link
+            <img src="ClaudeSabreDominance.jpg
                  style="display:block; width:100%; height:auto; border:0; outline:none;">
           </td>
         </tr>
@@ -466,7 +466,7 @@
     <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%" style="border:1px solid #800000;">
       <tr>
         <td>
-          <img src="https://drive.google.com/file/d/1c91dRKttd-m2Zh2Uh3xawGYKNhrEP3m4/view?usp=drive_link" 
+          <img src="JasonAndJordyTheCanadian.jpg" 
                alt="Closing photo"
                style="display:block; width:100%; height:auto; border:0; outline:none;">
         </td>
